--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="cards-wrapper">
                     <div class="card">
                         <div class="front-side">
-                            <img src="images/forest.jpg" 
+                            <img src="forest.jpg" 
                             alt="forest" class="card-image">
                             <h1 class="tour-name">the wild forest </h1>
                             <ul class="card-list">
