--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         then turns you into a storyteller"</p>
                 </h1>       
                 
-                  <img src="images/air-balloon.png" 
+                  <img src="air-balloon.png" 
                   alt="Header Image" class="header-image" width="570px">   
                   <div class="logo">
                       <h1>
@@ -70,7 +70,7 @@
                     </div>
                     <div class="card">
                         <div class="front-side">
-                            <img src="images/river.jpg" 
+                            <img src="river.jpg" 
                             alt="river" class="card-image">
                             <h1 class="tour-name">Along the river  </h1>
                             <ul class="card-list">
@@ -92,7 +92,7 @@
                     </div>
                     <div class="card">
                         <div class="front-side">
-                            <img src="images/sea.jpg" 
+                            <img src="sea.jpg" 
                             alt="sea" class="card-image">
                             <h1 class="tour-name"> the island beach  </h1>
                             <ul class="card-list">
@@ -121,13 +121,13 @@
         <section class="stories">
             <div class="video-container">
                 <video  class="bg-video" autoplay muted loop >
-                    <source src="images/video.mp4" type="video/mp4">
+                    <source src="video.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="stories-wrapper">
                 <div class="story-bg">
                     <div class="story">
-                        <img src="images/story-img-1.jpg" alt="storyImage" class="story-image">
+                        <img src="story-img-1.jpg" alt="storyImage" class="story-image">
                         <div class="story-text">
                             <h1 class="story-heading">thes were the best days of this year</h1>
                         <p class="story-paragraph">
@@ -144,7 +144,7 @@
            <div class="stories-wrapper">
                 <div class="story-bg">
                     <div class="story">
-                        <img src="images/story-img-2.jpg" alt="storyImage" class="story-image">
+                        <img src="story-img-2.jpg" alt="storyImage" class="story-image">
                         <div class="story-text">
                             <h1 class="story-heading">i enjoyed this great tour </h1>
                         <p class="story-paragraph">
