--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         then turns you into a storyteller"</p>
                 </h1>       
                 
-                  <img src="images/air-balloon.png" 
+                  <img src="air-balloon.png" 
                   alt="Header Image" class="header-image" width="570px">   
                  
                   <div class="logo">
