--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="cards-wrapper">
                     <div class="card">
                         <div class="front-side">
-                            <img src="images/forest.jpg" 
+                            <img src="forest.jpg" 
                             alt="forest" class="card-image">
                             <h1 class="tour-name">the wild forest </h1>
                             <ul class="card-list">
@@ -89,7 +89,7 @@
                     </div>
                     <div class="card">
                         <div class="front-side">
-                            <img src="images/river.jpg" 
+                            <img src="river.jpg" 
                             alt="river" class="card-image">
                             <h1 class="tour-name">Along the river  </h1>
                             <ul class="card-list">
@@ -111,7 +111,7 @@
                     </div>
                     <div class="card">
                         <div class="front-side">
-                            <img src="images/sea.jpg" 
+                            <img src="sea.jpg" 
                             alt="sea" class="card-image">
                             <h1 class="tour-name"> the island beach  </h1>
                             <ul class="card-list">
@@ -140,7 +140,7 @@
         <section class="stories">
             <div class="video-container">
                 <video  class="bg-video" autoplay muted loop >
-                    <source src="images/video.mp4" type="video/mp4">
+                    <source src="video.mp4" type="video/mp4">
                 </video>
             </div>
             <div class="stories-wrapper">
