--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="stories-wrapper">
                 <div class="story-bg">
                     <div class="story">
-                        <img src="images/story-img-1.jpg" alt="storyImage" class="story-image">
+                        <img src="story-img-1.jpg" alt="storyImage" class="story-image">
                         <div class="story-text">
                             <h1 class="story-heading">thes were the best days of this year</h1>
                         <p class="story-paragraph">
@@ -163,7 +163,7 @@
            <div class="stories-wrapper">
                 <div class="story-bg">
                     <div class="story">
-                        <img src="images/story-img-2.jpg" alt="storyImage" class="story-image">
+                        <img src="story-img-2.jpg" alt="storyImage" class="story-image">
                         <div class="story-text">
                             <h1 class="story-heading">i enjoyed this great tour </h1>
                         <p class="story-paragraph">
