--- a/index.html
+++ b/index.html
@@ -180,6 +180,83 @@
             
         </section>
         <!-- end of popular tour part --> 
+        <!-- gallery -->
+                        <section class="gallery">
+                            <div class="page">
+                                <div class="page__demo">
+                                  <div class="page__container">
+                                    <div class="photobox photobox_type1">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1472806679307-eab7abd1eb32?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">Time is just a memory</span>
+                                      </div>
+                                    </div>
+                                    <div class="photobox photobox_type2">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1532339142463-fd0a8979791a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">a unique and joyful experience</span>
+                                      </div>
+                                    </div>
+                                    <div class="photobox photobox_type3">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1524496686051-f9b8e8cf9d1a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label"> become independent</span>
+                                      </div>
+                                    </div>
+                                    <div class="photobox photobox_type4">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1519046904884-53103b34b206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+                                        class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">free activities</span>
+                                      </div>
+                                    </div>      		
+                                    <div class="photobox photobox_type5">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1489323588428-2cb185f5cd5c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" 
+                                         class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">the best time to think </span>
+                                      </div>
+                                    </div>      					
+                                    <div class="photobox photobox_type6">
+                                      <div class="photobox__previewbox">
+                                        <img src ="https://images.unsplash.com/photo-1462558073967-9fd054c339d1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+                                         class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">see amazing sites </span>
+                                      </div>
+                                    </div>
+                                    <div class="photobox photobox_type7">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1529180979161-06b8b6d6f2be?ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80 "
+                                         class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">friends love </span>
+                                      </div>
+                                    </div>
+                                    <div class="photobox photobox_type8">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1510414842594-a61c69b5ae57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">Read a history book with this view </span>
+                                      </div>
+                                    </div>      
+                                    <div class="photobox photobox_type9">
+                                      <div class="photobox__previewbox">
+                                        <img src=
+                                        "https://images.unsplash.com/photo-1500077218853-3a39a9a63ed3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="photobox__preview" alt="Preview">
+                                        <span class="photobox__label">It’s OK to wear the same t-shirt</span>
+                                      </div>
+                                    </div>
+                                  </div>  
+                                </div>
+                              </div>
+                        </section>
+                                 <!-- end of gallery -->
+        
         <!-- contact part-->
         <section class="contact">
             <h1 class="contact-heading">CONTACT US</h1>
