--- a/index.html
+++ b/index.html
@@ -218,14 +218,14 @@
                                       <div class="photobox__previewbox">
                                         <img src=
                                         "https://images.unsplash.com/photo-1489323588428-2cb185f5cd5c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" 
-                                         class="photobox__preview" alt="Preview">
+                                         class="photobox__preview" alt="Preview" width="300px">
                                         <span class="photobox__label">the best time to think </span>
                                       </div>
                                     </div>      					
                                     <div class="photobox photobox_type6">
                                       <div class="photobox__previewbox">
                                         <img src ="https://images.unsplash.com/photo-1462558073967-9fd054c339d1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
-                                         class="photobox__preview" alt="Preview">
+                                         class="photobox__preview" alt="Preview" width="300px">
                                         <span class="photobox__label">see amazing sites </span>
                                       </div>
                                     </div>
@@ -233,21 +233,23 @@
                                       <div class="photobox__previewbox">
                                         <img src=
                                         "https://images.unsplash.com/photo-1529180979161-06b8b6d6f2be?ixlib=rb-1.2.1&auto=format&fit=crop&w=1502&q=80 "
-                                         class="photobox__preview" alt="Preview">
+                                         class="photobox__preview" alt="Preview" width="300px">
                                         <span class="photobox__label">friends love </span>
                                       </div>
                                     </div>
                                     <div class="photobox photobox_type8">
                                       <div class="photobox__previewbox">
                                         <img src=
-                                        "https://images.unsplash.com/photo-1510414842594-a61c69b5ae57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="photobox__preview" alt="Preview">
+                                        "https://images.unsplash.com/photo-1510414842594-a61c69b5ae57?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" 
+                                             class="photobox__preview" alt="Preview" width="300px">
                                         <span class="photobox__label">Read a history book with this view </span>
                                       </div>
                                     </div>      
                                     <div class="photobox photobox_type9">
                                       <div class="photobox__previewbox">
                                         <img src=
-                                        "https://images.unsplash.com/photo-1500077218853-3a39a9a63ed3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80" class="photobox__preview" alt="Preview">
+                                        "https://images.unsplash.com/photo-1500077218853-3a39a9a63ed3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80"
+                                             class="photobox__preview" alt="Preview" width="300px">
                                         <span class="photobox__label">It’s OK to wear the same t-shirt</span>
                                       </div>
                                     </div>
